--- a/rf_analysis.ipynb
+++ b/rf_analysis.ipynb
@@ -16,18 +16,24 @@
       "from evaluator import detail_evaluate_dataset_rf_tree\n",
       "import json\n",
       "\n",
+      "airports = ['yssy', 'egll', 'zbaa']\n",
+      "class_vars = ['metar_wind_spd', 'metar_press', 'metar_rh']\n",
+      "\n",
+      "airport = airports[2]\n",
+      "class_var = class_vars[0]\n",
+      "\n",
       "for i in range(1,6):\n",
-      "    test_df = pickle.load(open(\"/home/roz016/Dropbox/Data for Tree/Results/cx5_rf50_bin100/yssy_metar_wind_spd_cx{}_testdf.pick\".format(i), \"rb\"))\n",
-      "    forest = pickle.load(open(\"/home/roz016/Dropbox/Data for Tree/Results/cx5_rf50_bin100/yssy_metar_wind_spd_bin100_cx{}_rf.pick\".format(i), \"rb\"))\n",
-      "    tree = pickle.load(open(\"/home/roz016/Dropbox/Data for Tree/Results/cx5_rf50_bin100/yssy_metar_wind_spd_bin100_cx{}_tree.pick\".format(i), \"rb\"))\n",
+      "    test_df = pickle.load(open(\"/home/roz016/Dropbox/Data for Tree/Results/cx5_rf50_bin100/{}_{}_cx{}_testdf.pick\".format(airport, class_var, i), \"rb\"))\n",
+      "    forest = pickle.load(open(\"/home/roz016/Dropbox/Data for Tree/Results/cx5_rf50_bin100/{}_{}_bin100_cx{}_rf.pick\".format(airport, class_var, i), \"rb\"))\n",
+      "    tree = pickle.load(open(\"/home/roz016/Dropbox/Data for Tree/Results/cx5_rf50_bin100/{}_{}_bin100_cx{}_tree.pick\".format(airport, class_var, i), \"rb\"))\n",
       "    \n",
-      "    with open(\"/home/roz016/Dropbox/Data for Tree/Results/cx5_rf50_bin100/yssy_metar_wind_spd_cx{}.json\".format(i), 'w') as outfile:\n",
+      "    with open(\"/home/roz016/Dropbox/Data for Tree/Results/cx5_rf50_bin100/{}_{}_cx{}.json\".format(airport, class_var, i), 'w') as outfile:\n",
       "        json.dump(detail_evaluate_dataset_rf_tree('gfs_wind_spd', 'metar_wind_spd', forest, tree, test_df), outfile)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
