Circular criteria improved

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1064,85 +1064,56 @@
       "for i in range(5, 10):\n",
       "    df2.ix[i] = i\n",
       "    \n",
-      "df.append(df2)"
+      "df = df.append(df2)\n",
+      "\n",
+      "df.shape[0]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "html": [
-        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-        "<table border=\"1\" class=\"dataframe\">\n",
-        "  <thead>\n",
-        "    <tr style=\"text-align: right;\">\n",
-        "      <th></th>\n",
-        "      <th>a</th>\n",
-        "    </tr>\n",
-        "  </thead>\n",
-        "  <tbody>\n",
-        "    <tr>\n",
-        "      <th>0</th>\n",
-        "      <td> 0</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>1</th>\n",
-        "      <td> 1</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>2</th>\n",
-        "      <td> 2</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>3</th>\n",
-        "      <td> 3</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>4</th>\n",
-        "      <td> 4</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>5</th>\n",
-        "      <td> 5</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>6</th>\n",
-        "      <td> 6</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>7</th>\n",
-        "      <td> 7</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>8</th>\n",
-        "      <td> 8</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>9</th>\n",
-        "      <td> 9</td>\n",
-        "    </tr>\n",
-        "  </tbody>\n",
-        "</table>\n",
-        "</div>"
-       ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 21,
+       "prompt_number": 3,
        "text": [
-        "   a\n",
-        "0  0\n",
-        "1  1\n",
-        "2  2\n",
-        "3  3\n",
-        "4  4\n",
-        "5  5\n",
-        "6  6\n",
-        "7  7\n",
-        "8  8\n",
-        "9  9"
+        "10"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import math\n",
+      "\n",
+      "a = [0,180]\n",
+      "\n",
+      "def circular_variance(data):\n",
+      "\n",
+      "    x = y = 0.0\n",
+      "    for value in data:\n",
+      "        x += math.cos(math.radians(value))\n",
+      "        y += math.sin(math.radians(value))\n",
+      "\n",
+      "    return 1 - math.sqrt(math.pow(x/len(data), 2) + math.pow(y/len(data), 2))\n",
+      "\n",
+      "circular_variance(a)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
+       "text": [
+        "0.9999999999999999"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
